<resources>
    <string name="app_name">Izgubljeno-nađeno</string>
    <string name="action_settings">Settings</string>
    <string name="stvar_hint">Unesite naziv stvari</string>
    <string name="stvar_naslov">Naziv stvari</string>
    <string name="stvar_detalji_pronalaska">Detalji</string>
    <string name="stvar_lokacija">Lokacija: </string>
    <string name="stvar_ime_korisnika">Ime korisnika</string>
    <string name="stvar_kontakt_korisnika">Kontakt: </string>
    <string name="title_activity_stvar_list">StvarListActivity</string>
    <string name="datum_picker_naslov">Odaberite datum</string>
    <string name="nova_stvar">Nova stvar</string>
    <string name="datum_placeholder">Datum:</string>
    <string name="izgubljeno_string">Izgubljeno</string>
    <string name="nadjeno_string">Nađeno</string>
    <string name="sve">Sve</string>
    <string name="unesi_broj">Unesite broj</string>
    <string name="dozvola_za_poziv">Nemate dozvolu za poziv</string>
</resources>
